# nRF_connect_sdk_APPs

wireless_dmq/: CMakeLists.txt  prj.conf  prj_central.conf  prj_central_peripheral.conf  prj_peripheral.conf  wireless_dmq.code-workspace
wireless_dmq/src/: BLE_central.c  BLE_central.h  BLE_central_peripheral.c  BLE_central_peripheral.h  BLE_manager.c  BLE_manager.h  BLE_peripheral.c  BLE_peripheral.h  main.c
